JEXL-60 Step 2 of 4
Refactor two packages:
 - org.apache.commons.jexl.util
 - org.apache.commons.jexl.util.introspection

Changes include:
 * A more complete set of specialized executors for property, map, list, duck setters and getters etc.
 * Support for the new() function which allows calling constructors
 * Added two missing package.html files
 * New DebugInfo interface for use with Uberspects
 * Separated out MethodKey class
 * Type safety and Javadoc changes

Based on patch by Henri Biestro <hbiestro at gmail dot com> with minor changes.


git-svn-id: https://svn.apache.org/repos/asf/commons/proper/jexl/branches/2.0@799779 13f79535-47bb-0310-9956-ffa450edef68